# llm-oxigenio-brasil

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_contribution.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
data/metadata/: README.md
docs/: benchmark_plan_ptbr.md  brazilian_domain_strategy.md  data_rejection_policy.md  data_source_manifest.md  dev_senior_onboarding.md  eval_card_template.md  financial_report.md  model_card_template.md  model_selection_policy.md  pii_sensitive_data_policy.md  research_north_star.md  roadmap.md
docs/references/: maritaca_sabia_landscape.md
site/: DESIGN_SYSTEM.md  README.md  index.html  main.js  styles.css
src/oxigen/: __init__.py
src/oxigen/training/: __init__.py
src/oxigen/training/thinking/: __init__.py  composer.py  endangered_species.py  vocabulary.py
tests/: test_thinking.py
tests/unit/: __init__.py  test_landing_page.py  test_thinking.py
